--- a/scss/styless.css
+++ b/scss/styless.css
@@ -15,20 +15,19 @@
   }
 }
 .slider {
-  background: rgb(44, 43, 43);
-  box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
-  height: 100px;
+  background: rgb(255, 255, 255);
+  height: 150px;
   margin: auto;
   overflow: hidden;
   position: relative;
-  width: 960px;
+  width: 1000%;
 }
 .slider::before, .slider::after {
-  background: linear-gradient(to right, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(to right, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
   content: "";
-  height: 100px;
+  height: -100px;
   position: absolute;
-  width: 200px;
+  width: 100%;
   z-index: 2;
 }
 .slider::after {
