--- a/css/styles.css
+++ b/css/styles.css
@@ -1654,6 +1654,15 @@ p {
     }
 }
 
+@media only screen and (max-width: 1440px) {
+    body {
+        overflow-x: hidden;
+    }
+    .services {
+        overflow-x: hidden;
+    }
+}
+
 @media only screen and (max-width: 768px) {
     body,
     html {
