--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+button {
+    font-family: 'Righteous';
+}
+
 body {
     background-color: #1b1b1c;
     font-family: "Righteous";
@@ -21,7 +25,7 @@ body {
 }
 
 .scrolled.slide-up {
-    animation: slide-in-up 2s ease-in-out both;
+    animation: slide-in-up 1s ease-in-out both;
 }
 
 @keyframes slide-in-up {
@@ -38,13 +42,13 @@ body {
 }
 
 .scrolled.slide-down {
-    animation: slide-in-down 2s ease-in-out both;
+    animation: slide-in-down 1s ease-in-out both;
 }
 
 @keyframes slide-in-down {
     0% {
         -webkit-transform: translateY(-100px);
-        transform: translateY(-100px);
+        transform: translateY(100px);
         opacity: 0;
     }
     100% {
@@ -55,13 +59,13 @@ body {
 }
 
 .scrolled.slide-left {
-    animation: slide-in-left 2s ease-in-out both;
+    animation: slide-in-left 1s ease-in-out both;
 }
 
 @keyframes slide-in-left {
     0% {
-        -webkit-transform: translateX(-100px);
-        transform: translateX(-100px);
+        -webkit-transform: translateX(100px);
+        transform: translateX(20vh);
         opacity: 0;
     }
     100% {
@@ -72,13 +76,13 @@ body {
 }
 
 .scrolled.slide-right {
-    animation: slide-in-right 2s ease-in-out both;
+    animation: slide-in-right 1s ease-in-out both;
 }
 
 @keyframes slide-in-right {
     0% {
         -webkit-transform: translateX(100px);
-        transform: translateX(100px);
+        transform: translateX(20vh);
         opacity: 0;
     }
     100% {
@@ -110,11 +114,11 @@ img {
 }
 
 .bar1 {
-    width: 90%;
+    width: 100%;
 }
 
 .bar2 {
-    width: 60%;
+    width: 100%;
 }
 
 .bar3 {
@@ -442,7 +446,7 @@ img {
     #mobile-menu {
         position: absolute;
         top: 10%;
-        right: 5%;
+        right: 1%;
         transform: translate(5%, 20%);
     }
     .navbar__toggle .menubar {
@@ -1037,7 +1041,7 @@ section button {
     align-content: center;
 }
 
-.container a {
+.cntainer a {
     color: #333333;
     font-weight: 400;
     outline: none;
@@ -1045,20 +1049,20 @@ section button {
     transition: 0.5s;
 }
 
-.container a:hover,
+.cntainer a:hover,
 a:focus {
     outline: none;
     text-decoration: none;
 }
 
-.container p {
+.cntainer p {
     padding: 0;
     margin: 0 0 15px 0;
     color: #454545;
     font-weight: 300;
 }
 
-.container h1,
+.cntainer h1,
 h2,
 h3,
 h4,
@@ -1070,12 +1074,13 @@ h6 {
     font-weight: 700;
 }
 
-.container img {
+.cntainer img {
     width: 100%;
     height: auto;
 }
 
-.container {
+.cntainer {
+    max-width: fit-content;
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
@@ -1119,7 +1124,7 @@ section .sectio {
     text-decoration-color: #feef3c;
 }
 
-.container .section-title h1::before {
+.cntainer .section-title h1::before {
     left: 30%;
 }
 
@@ -1128,7 +1133,6 @@ section .sectio {
     flex-wrap: wrap;
     margin-right: -15px;
     margin-left: -15px;
-    grid-template-columns: auto auto auto;
 }
 
 .column {
@@ -1289,7 +1293,7 @@ section .sectio {
 /* Mobile Responsive */
 
 @media (min-width: 576px) {
-    .container {
+    .cntainer {
         max-width: 540px;
     }
     .column {
@@ -1298,7 +1302,7 @@ section .sectio {
 }
 
 @media (min-width: 768px) {
-    .container {
+    .cntainer {
         max-width: 720px;
     }
     .column {
@@ -1307,7 +1311,7 @@ section .sectio {
 }
 
 @media (min-width: 992px) {
-    .container {
+    .cntainer {
         max-width: 960px;
     }
     .column {
@@ -1316,7 +1320,7 @@ section .sectio {
 }
 
 @media (min-width: 1200px) {
-    .container {
+    .cntainer {
         max-width: 1140px;
     }
 }
@@ -1668,6 +1672,13 @@ p {
     html {
         overflow-x: hidden;
     }
+    .navbar__menu {
+        width: 100%;
+        height: 110.1vh;
+    }
+    .navbar__menu .login-container button {
+        display: none;
+    }
     .slideshow-container {
         height: 90vh;
         margin-bottom: 1px;
@@ -1905,7 +1916,7 @@ p {
         line-height: 2.8vw;
         letter-spacing: 0em;
     }
-    .container .row .column {
+    .cntainer .row .column {
         display: grid;
         grid-template-columns: auto auto auto;
     }
@@ -2185,7 +2196,7 @@ p {
         line-height: 5.8vw;
         letter-spacing: 0em;
     }
-    .container {
+    .cntainer {
         width: 100%;
         padding-right: 15px;
         padding-left: 15px;
@@ -2514,7 +2525,7 @@ p {
         line-height: 5.8vw;
         letter-spacing: 0em;
     }
-    .container {
+    .cntainer {
         width: 100%;
         padding-right: 15px;
         padding-left: 15px;
